--- a/index.html
+++ b/index.html
@@ -4,25 +4,37 @@
 <head>
     <title>web2 js</title>
     <meta charset="utf-8">
+    <script>
+        function nightDayHandler(button) {
+            var element = document.querySelector('body');
+            element.style.backgroundColor = button.value === 'day' ? 'white' : 'black';
+            element.style.color = button.value === 'day' ? 'black' : 'white';
+            button.value = button.value === 'day' ? 'night' : 'day';
+        }
+    </script>
 </head>
 
 <body style="background-color: white;">
     <h1><a href="index.html">web</a></h1>
 
-    <input type="button" value="night" onclick="
-        var element = document.querySelector('body');        
-        element.style.backgroundColor = this.value === 'day' ? 'white' : 'black';
-        element.style.color = this.value === 'day' ? 'black' : 'white';
-        this.value = this.value === 'day' ? 'night' : 'day';
-    ">
+    <input type="button" value="night" onclick="nightDayHandler(this)">
+    <input type="button" value="night" onclick="nightDayHandler(this)">
+    <input type="button" value="night" onclick="nightDayHandler(this)">
+    <input type="button" value="night" onclick="nightDayHandler(this)">
 
     <ol>
         <li><a href="html.html">html</a></li>
         <li><a href="css.html">css</a></li>
+        <li><input type="button" value="night" onclick="nightDayHandler(this)"></li>
         <li><a href="js.html">js</a></li>
     </ol>
 
     <h2>web2 js - index</h2>
+
+    <input type="button" value="night" onclick="nightDayHandler(this)">
+    <input type="button" value="night" onclick="nightDayHandler(this)">
+    <input type="button" value="night" onclick="nightDayHandler(this)">
+    <input type="button" value="night" onclick="nightDayHandler(this)">
 
     <p>web2 js - index</p>
 </body>
