--- a/js.html
+++ b/js.html
@@ -3,13 +3,17 @@
     <head>
         <title>web2 js</title>
         <meta charset="utf-8">
+        <script src="Designer.js"></script>
     </head>
 
     <body>
         <h1><a href="index.html">web</a></h1>
 
+        <!--
         <input type="button" value="night">
         <input type="button" value="day">
+        -->
+        <input type="button" value="night" onclick="nightDayHandler(this)">
 
         <ol>
             <li><a href="html.html">html</a></li>
